# substack-epub-downloader

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  GbaScene.tsx  styles.css  types.ts  webFallback.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: export.rs  main.rs  models.rs  substack.rs  utils.rs
