[package]
name = "substack-downloader"
version = "0.1.0"
description = "Desktop Substack downloader"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
rss = "2"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
